[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Interface/Themes/HiResTheme/Icons/png/chevron_icon.png" type="Texture" id=1]
[ext_resource path="res://Nodes/Control/Containers/column_container.gd" type="Script" id=2]
[ext_resource path="res://Assets/Resources/grey_radial_gradient.tres" type="Texture" id=3]
[ext_resource path="res://Nodes/Control/Containers/ScrollColumnContainer/scroll_column_container.gd" type="Script" id=4]
[ext_resource path="res://Nodes/Drag/Drag.tscn" type="PackedScene" id=5]
[ext_resource path="res://Nodes/Control/PopButton/pop_button.gd" type="Script" id=6]

[sub_resource type="Animation" id=2]
resource_name = "Enter"
length = 0.6
step = 0.025
tracks/0/type = "bezier"
tracks/0/path = NodePath("RightButtonContainer/RightButton:rect_scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1e-05, 0, 0, 0, 0, 1.2, -0.2, 0, 0.05, 0, 1, -0.1, 0, 0, 0 ),
"times": PoolRealArray( 0.2, 0.45, 0.6 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("RightButtonContainer/RightButton:rect_scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1e-05, 0, 0, 0, 0, 1.2, -0.2, 0, 0.05, 0, 1, -0.1, 0, 0, 0 ),
"times": PoolRealArray( 0.2, 0.45, 0.6 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("LeftButtonContainer/LeftButton:rect_scale:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1e-05, 0, 0, 0, 0, 1.2, -0.2, 0, 0.05, 0, 1, -0.1, 0, 0, 0 ),
"times": PoolRealArray( 0, 0.25, 0.4 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("LeftButtonContainer/LeftButton:rect_scale:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1e-05, 0, 0, 0, 0, 1.2, -0.2, 0, 0.05, 0, 1, -0.1, 0, 0, 0 ),
"times": PoolRealArray( 0, 0.25, 0.4 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("RightButtonContainer/RightButton:rect_rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 30, 0, 0, 0.25, 0, 0, -0.25, 0, 0, 0 ),
"times": PoolRealArray( 0.2, 0.6 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("LeftButtonContainer/LeftButton:rect_rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 60, 0, 0, 0, 0, 0, -0.1, 0, 0, 0 ),
"times": PoolRealArray( 0, 0.4 )
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("RightButtonContainer/RightButton:rect_scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1e-05, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("RightButtonContainer/RightButton:rect_scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1e-05, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("LeftButtonContainer/LeftButton:rect_scale:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1e-05, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("LeftButtonContainer/LeftButton:rect_scale:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1e-05, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("RightButtonContainer/RightButton:rect_rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 30, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("LeftButtonContainer/LeftButton:rect_rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 60, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 40.0
content_margin_right = 40.0
content_margin_top = 15.0
content_margin_bottom = 15.0
bg_color = Color( 0.509804, 0.560784, 0.6, 0.490196 )
border_color = Color( 1, 1, 1, 0.196078 )
corner_radius_top_left = 49
corner_radius_top_right = 49
corner_radius_bottom_right = 49
corner_radius_bottom_left = 49
corner_detail = 20
shadow_color = Color( 0.164706, 0.164706, 0.180392, 0.0784314 )
shadow_offset = Vector2( 0, 3 )

[node name="ScrollColumnContainer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 200 )
mouse_filter = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Enter = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="ColumnContainer" type="Container" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 200 )
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
visible_columns = 5.5

[node name="LeftButtonContainer" type="MarginContainer" parent="."]
anchor_bottom = 1.0
margin_right = 160.0
rect_min_size = Vector2( 200, 200 )
mouse_filter = 2
custom_constants/margin_left = -140
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftButton" type="Button" parent="LeftButtonContainer"]
margin_left = -20.0
margin_top = 670.0
margin_right = 80.0
margin_bottom = 770.0
rect_min_size = Vector2( 100, 100 )
rect_pivot_offset = Vector2( 50, 50 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/disabled = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
script = ExtResource( 6 )

[node name="Gradient" type="TextureRect" parent="LeftButtonContainer/LeftButton"]
modulate = Color( 1, 1, 1, 0.490196 )
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -150.0
margin_right = 150.0
margin_bottom = 150.0
rect_min_size = Vector2( 300, 300 )
rect_pivot_offset = Vector2( 150, 150 )
mouse_filter = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChevronIcon" type="TextureRect" parent="LeftButtonContainer/LeftButton"]
modulate = Color( 0.301961, 0.341176, 0.372549, 0.784314 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -30.0
margin_top = -30.0
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightButtonContainer" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -10.0
rect_min_size = Vector2( 200, 200 )
mouse_filter = 2
custom_constants/margin_left = -290
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightButton" type="Button" parent="RightButtonContainer"]
margin_left = -95.0
margin_top = 670.0
margin_right = 5.0
margin_bottom = 770.0
rect_min_size = Vector2( 100, 100 )
rect_pivot_offset = Vector2( 50, 50 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/disabled = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
script = ExtResource( 6 )

[node name="Gradient" type="TextureRect" parent="RightButtonContainer/RightButton"]
modulate = Color( 1, 1, 1, 0.490196 )
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -150.0
margin_right = 150.0
margin_bottom = 150.0
rect_min_size = Vector2( 300, 300 )
rect_pivot_offset = Vector2( 150, 150 )
mouse_filter = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChevronIcon" type="TextureRect" parent="RightButtonContainer/RightButton"]
modulate = Color( 0.301961, 0.341176, 0.372549, 0.784314 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -30.0
margin_top = -30.0
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="Drag" parent="." instance=ExtResource( 5 )]
unhandled_only = false
allow_camera_scroll = false
